force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Apikey__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Apikey__c</fullName>
    <inlineHelpText>To get the API Key of the app specified, log in to your Gupshup.io account and navigate to Dashboard and click the Settings icon beside the app name. Scroll down the window and look for the API Key under the Request code snippet.</inlineHelpText>
    <label>API Key</label>
    <length>60</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>