force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Appname__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Appname__c</fullName>
    <inlineHelpText>The name of the app created in your gupshup account. e.g., demoapp. If you don’t have an app created yet, log in to your Gupshup.io account and navigate to Dashboard &gt; WhatsApp. Then, click on the + icon and click the Access API button. Enter the name of the app without spaces or any special characters and finish the rest of the procedures.</inlineHelpText>
    <label>App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>