force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Auth_Scheme__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Auth_Scheme__c</fullName>
    <label>Auth Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>