force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Business_Number__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Business_Number__c</fullName>
    <inlineHelpText>Enter WhatsApp Business Number associated with your gupshup account i.e. country code + 10 digit gupshup WhatsApp Business Number(e.g. 917XXXXXXXX5).</inlineHelpText>
    <label>WhatsApp Business Number</label>
    <type>Phone</type>
</CustomField>