force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Channel__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>