force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Enable_In_App_Notifications_for_Inbound__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Enable_In_App_Notifications_for_Inbound__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow notifications for Incoming WhatsApp Message</description>
    <inlineHelpText>Allow notifications for Incoming WhatsApp Message</inlineHelpText>
    <label>Enable In-App Notifications for Inbound</label>
    <type>Checkbox</type>
</CustomField>