force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__HSM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__HSM_Account_ID__c</fullName>
    <inlineHelpText>The HSM Account ID of your gupshup enterprise account.</inlineHelpText>
    <label>HSM Account ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>