force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__HSM_Password__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__HSM_Password__c</fullName>
    <inlineHelpText>The password associated with the HSM Account ID.</inlineHelpText>
    <label>Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>