force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Password__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Password__c</fullName>
    <inlineHelpText>Password is provided by gupshup for authentication of User ID. The password must be the same as used to log on to the enterprise SMS gupshup website.</inlineHelpText>
    <label>Password</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>