force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Set_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Set_Callback_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will automatically set the callback URL for your account.</inlineHelpText>
    <label>Receive Incoming Messages</label>
    <type>Checkbox</type>
</CustomField>