force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__UserId__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__UserId__c</fullName>
    <inlineHelpText>The account number provided by the enterprise SMS gupshup.</inlineHelpText>
    <label>User ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>