force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__Version__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Version__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>