force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/fields/gupshupcrm__What_s_App_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__What_s_App_Channel_Type__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
                <default>true</default>
                <label>WhatsApp Enterprise</label>
            </value>
            <value>
                <fullName>Self-Serve</fullName>
                <label>WhatsApp Self-Serve</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>