force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/validationRules/gupshupcrm__Enterprise_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>gupshupcrm__Enterprise_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(gupshupcrm__What_s_App_Channel_Type__c , &apos;Enterprise&apos;),OR(ISBLANK(  gupshupcrm__Business_Number__c  ), ISBLANK(  gupshupcrm__HSM_Password__c  ), ISBLANK(   gupshupcrm__HSM_Account_ID__c ) ) )</errorConditionFormula>
    <errorMessage>Please fill required fields HSM Account ID, Password and WhatsApp Business Number</errorMessage>
</ValidationRule>