force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/validationRules/gupshupcrm__SelfServe_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>gupshupcrm__SelfServe_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(gupshupcrm__What_s_App_Channel_Type__c , &apos;Self-Serve&apos;),OR( ISBLANK( gupshupcrm__Business_Number__c ), ISBLANK(  gupshupcrm__Apikey__c  ), ISBLANK(  gupshupcrm__Appname__c ) ) )</errorConditionFormula>
    <errorMessage>Please fill required fields App Name, API Key and WhatsApp Business Number</errorMessage>
</ValidationRule>