force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/validationRules/gupshupcrm__SMS.validationRule-meta.xml
<ValidationRule>
    <fullName>gupshupcrm__SMS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(gupshupcrm__What_s_App_Channel_Type__c , &apos;SMS&apos;),OR( ISBLANK(  gupshupcrm__Password__c ), ISBLANK(  gupshupcrm__UserId__c ) ) )</errorConditionFormula>
    <errorMessage>Please fill required fields User ID and Password</errorMessage>
</ValidationRule>