force-app/main/default/objects/gupshupcrm__WhatsApp_Channel__c/listViews/gupshupcrm__All.listView-meta.xml
<ListView>
    <fullName>gupshupcrm__All</fullName>
    <columns>NAME</columns>
    <columns>gupshupcrm__Is_Active__c</columns>
    <columns>gupshupcrm__Set_Callback_URL__c</columns>
    <columns>gupshupcrm__HSM_Account_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>